<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuSeeReward"
        android:icon="@drawable/baseline_diamond"
        android:title="Get Diamond"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/baseline_add_circle_24"
        android:title="@string/menu_item_add_config"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/import_qrcode"
                android:icon="@drawable/ic_baseline_qr_code"
                android:title="@string/menu_item_import_config_qrcode"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_clipboard"
                android:icon="@drawable/ic_baseline_content_paste"
                android:title="@string/menu_item_import_config_clipboard"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_vmess"
                android:icon="@drawable/ic_baseline_post_add"
                android:title="@string/menu_item_import_config_manually_vmess"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_vless"
                android:icon="@drawable/ic_baseline_post_add"
                android:title="@string/menu_item_import_config_manually_vless"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_ss"
                android:icon="@drawable/ic_baseline_post_add"
                android:title="@string/menu_item_import_config_manually_ss"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_socks"
                android:icon="@drawable/ic_baseline_post_add"
                android:title="@string/menu_item_import_config_manually_socks"
                app:showAsAction="never" />
            <item
                android:id="@+id/import_manually_trojan"
                android:icon="@drawable/ic_baseline_post_add"
                android:title="@string/menu_item_import_config_manually_trojan"
                app:showAsAction="never" />

            <item
                android:icon="@drawable/ic_baseline_post_add"
                android:title="@string/menu_item_import_config_custom"
                app:showAsAction="always">
                <menu>
                    <item
                        android:id="@+id/import_config_custom_clipboard"
                        android:icon="@drawable/ic_baseline_content_paste"
                        android:title="@string/menu_item_import_config_custom_clipboard"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_local"
                        android:icon="@drawable/ic_baseline_create_new_folder"
                        android:title="@string/menu_item_import_config_custom_local"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_url"
                        android:icon="@drawable/ic_baseline_add_link"
                        android:title="@string/menu_item_import_config_custom_url"
                        app:showAsAction="never" />
                    <item
                        android:id="@+id/import_config_custom_url_scan"
                        android:icon="@drawable/ic_baseline_add_link"
                        android:title="@string/menu_item_import_config_custom_url_scan"
                        app:showAsAction="never" />
                </menu>
            </item>
        </menu>
    </item>


    <item
        android:icon="@drawable/baseline_more_vert"
        android:title="More settings"
        app:showAsAction="ifRoom">
        <menu>

            <item
                android:id="@+id/del_invalid_config"
                android:icon="@drawable/ic_delete_white_24dp"
                android:title="@string/title_del_invalid_config"
                app:showAsAction="always" />

            <item
                android:id="@+id/filter_config"
                android:icon="@drawable/ic_outline_filter_alt_white_24"
                android:title="@string/title_filter_config"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/service_restart"
                android:icon="@drawable/baseline_restart_alt"
                android:title="@string/title_service_restart"
                app:showAsAction="never" />
            <item
                android:id="@+id/del_all_config"
                android:icon="@drawable/baseline_delete_sweep"
                android:title="@string/title_del_all_config"
                app:showAsAction="never" />

            <item
                android:id="@+id/export_all"
                android:icon="@drawable/baseline_output_24"
                android:title="@string/title_export_all"
                app:showAsAction="never" />
            <item
                android:id="@+id/ping_all"
                android:icon="@drawable/baseline_network_ping_24"
                android:title="@string/title_ping_all_server"
                app:showAsAction="never" />
            <item
                android:id="@+id/real_ping_all"
                android:icon="@drawable/baseline_network_ping_24"
                android:title="@string/title_real_ping_all_server"
                app:showAsAction="never" />
            <item
                android:id="@+id/sort_by_test_results"
                android:icon="@drawable/baseline_sort_24"
                android:title="@string/title_sort_by_test_results"
                app:showAsAction="never" />
            <item
                android:id="@+id/sub_update"
                android:icon="@drawable/baseline_system_update_24"
                android:title="@string/title_sub_update"
                app:showAsAction="never" />
        </menu>
    </item>

</menu>