<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_bg"
    android:layout_width="match_parent"
    android:layout_height="@dimen/server_height"
    android:layout_marginTop="5dp"
    android:layoutDirection="ltr"
    android:layout_marginBottom="5dp"
    android:background="@drawable/server_item_bg"
    android:gravity="center_vertical">


    <LinearLayout
        android:id="@+id/layout_indicator"
        android:layout_width="10dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="#4CAF50"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:drawablePadding="2dp"
        android:lines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/baseline_merge_type_15"
        app:layout_constraintEnd_toStartOf="@+id/tv_subscription"
        app:layout_constraintStart_toEndOf="@+id/layout_indicator"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Vmess" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:minLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgShare"
        app:layout_constraintStart_toStartOf="@+id/tv_type"
        app:layout_constraintTop_toBottomOf="@+id/tv_type"
        tools:text="Server name" />

    <TextView
        android:id="@+id/tv_statistics"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:lines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="Server information" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:drawablePadding="3dp"
        android:gravity="center_vertical"
        android:lines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="15sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/outline_diamond_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_name"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:text="1000 deamond" />

    <TextView
        android:id="@+id/tv_subscription"
        style="@style/ServerInfoText"
        app:drawableEndCompat="@drawable/baseline_subscriptions_15"
        app:layout_constraintBottom_toBottomOf="@+id/txtPingResult"
        app:layout_constraintEnd_toStartOf="@+id/txtPingResult"
        app:layout_constraintTop_toTopOf="@+id/txtPingResult"
        tools:text="sub" />

    <TextView
        android:id="@+id/txtPingResult"
        style="@style/ServerInfoText"
        app:drawableEndCompat="@drawable/baseline_network_ping_15"
        app:layout_constraintEnd_toStartOf="@+id/txtUsage"
        app:layout_constraintTop_toTopOf="@id/tv_type"
        tools:text="ping 150" />

    <TextView
        android:id="@+id/txtUsage"
        style="@style/ServerInfoText"
        app:drawableEndCompat="@drawable/outline_person_outline_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_type"
        tools:text="1000" />

    <ImageView
        android:id="@+id/imgShare"
        style="@style/ServerIcons"
        android:contentDescription="@string/summary_pref_proxy_sharing_enabled"
        android:paddingBottom="7dp"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_share_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgDelete"
        app:layout_constraintEnd_toStartOf="@+id/imgEdit"
        app:layout_constraintTop_toTopOf="@+id/imgEdit" />


    <ImageView
        android:id="@+id/imgEdit"
        style="@style/ServerIcons"
        android:contentDescription="@string/app_name"
        android:paddingBottom="7dp"
        android:scaleType="fitEnd"
        android:src="@drawable/ic_edit_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgDelete"
        app:layout_constraintEnd_toStartOf="@+id/imgDelete"
        app:layout_constraintTop_toTopOf="@+id/imgDelete" />

    <ImageView
        android:id="@+id/imgDelete"
        style="@style/ServerIcons"
        android:contentDescription="@string/routing_settings_delete"
        android:paddingBottom="7dp"
        android:scaleType="fitEnd"
        android:src="@drawable/outline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_type" />

</androidx.constraintlayout.widget.ConstraintLayout>
